--- a/octoprint_bambu_connector/templates/bambu_connector.jinja2
+++ b/octoprint_bambu_connector/templates/bambu_connector.jinja2
@@ -25,6 +25,14 @@
                 </label>
             </div>
         </div>
+        <div class="row-fluid">
+			<div class="control-group span6">
+				<label class="control-label">{{ _('Plate Number') }}</label>
+				<div class="controls">
+					<input type="number" min="1" class="input input-mini" data-bind="value: plateNumber" />
+				</div>
+			</div>
+        </div>
     </div>
     <div class="modal-footer">
         <button class="btn btn-danger" data-bind="click: cancelPrintOptions">{{ _("Cancel") }}</button>
