feat: proper printer timezone configuration

--- a/octoprint_bambu_connector/templates/bambu_connector_settings.jinja2
+++ b/octoprint_bambu_connector/templates/bambu_connector_settings.jinja2
@@ -5,24 +5,26 @@
         <p>
             {% trans %}
             If your printer's local time is offset from your own (e.g. because you didn't set it up through Bambulab's phone app and never let it touch their
-            cloud), you can specify the offset in hours here. E.g. if your printer's files are shown as being 7 hours ahead of your local time, enter 7 below.
+            cloud), you can specify its timezone here. OctoPrint will then automatically calculate the time of stored files relative
+            to its own local server time.
         {% endtrans %}
     </p>
-    <p>
-        {% trans %}
-        Hint: The default timezone of Bambulab printers that never were connected to their app or cloud appears to be UTC+8.
-    {% endtrans %}
-</p>
-<div class="control-group">
-    <label class="control-label" for="settings-bambuConnector-printerTimeOffset">{{ _("Printer Time Offset") }}</label>
-    <div class="controls">
-        <input type="number"
-               step="any"
-               class="input-mini text-right"
-               data-bind="value: settingsViewModel.settings.plugins.bambu_connector.printer_time_offset"
-               id="settings-bambuConnector-printerTimeOffset">
-        <span class="add-on">h</span>
+    <div class="control-group">
+        <label class="control-label">{{ _("Timezone") }}</label>
+        <div class="controls">
+            <select data-bind="value: settingsViewModel.settings.plugins.bambu_connector.printer_timezone">
+                <option value="">
+                    {{ _("Server timezone (%%(server_time)s)") |format(server_time=plugin_bambu_connector_server_timezone) }}
+                </option>
+                <option value="{{ plugin_bambu_connector_default_printer_timezone }}">
+                    {{ _("Default printer timezone (%%(default_timezone)s)") |format(default_timezone=plugin_bambu_connector_default_printer_timezone) }}
+                </option>
+                {% for timezone in plugin_bambu_connector_timezones %}
+                    <option value="{{ timezone }}">{{ timezone }}</option>
+                {% endfor %}
+            </select>
+            <span class="help-block">{{ _("The default timezone of Bambulab printers that never were connected to their app or cloud appears to match <code>%%(default_timezone)s</code>.") | format(default_timezone=plugin_bambu_connector_default_printer_timezone) }}</span>
+        </div>
     </div>
-</div>
 </fieldset>
 </form>
